force-app/main/default/objects/Event__c/fields/EventDate__c.field-meta.xml
<CustomField>
    <fullName>EventDate__c</fullName>
    <label>Date de l&#39;événement</label>
    <type>DateTime</type>
</CustomField>