force-app/main/default/objects/Event__c/fields/Partenariat__c.field-meta.xml
<CustomField>
    <fullName>Partenariat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partenariat</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partenariat</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>