force-app/main/default/objects/Event__c/fields/SpeakersName__c.field-meta.xml
<CustomField>
    <fullName>SpeakersName__c</fullName>
    <label>Nom de l&#39;intervenant</label>
    <length>80</length>
    <type>Text</type>
</CustomField>